server/.happypack/s--1881909849
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/App/App.js: Unterminated regular expression (17:70)

[0m [90m 15 | [39m            [33m<[39m[33mdiv[39m className[33m=[39m[32m"app"[39m[33m>[39m
 [90m 16 | [39m                [33m<[39m[33mUser[39m name[33m=[39m{user[33m.[39mname} [33m/[39m[33m>[39m
[31m[1m>[22m[39m[90m 17 | [39m                [33m<[39m[33mPage[39m photos[33m=[39m{page[33m.[39mphotos} year[33m=[39m{page[33m.[39myear} setYear[33m=[39m{[33m/[39m[33m>[39m
 [90m    | [39m                                                                      [31m[1m^[22m[39m
 [90m 18 | [39m            [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 19 | [39m        )[33m;[39m
 [90m 20 | [39m    }[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/App/App.js: Unterminated regular expression (17:70)

[0m [90m 15 | [39m            [33m<[39m[33mdiv[39m className[33m=[39m[32m"app"[39m[33m>[39m
 [90m 16 | [39m                [33m<[39m[33mUser[39m name[33m=[39m{user[33m.[39mname} [33m/[39m[33m>[39m
[31m[1m>[22m[39m[90m 17 | [39m                [33m<[39m[33mPage[39m photos[33m=[39m{page[33m.[39mphotos} year[33m=[39m{page[33m.[39myear} setYear[33m=[39m{[33m/[39m[33m>[39m
 [90m    | [39m                                                                      [31m[1m^[22m[39m
 [90m 18 | [39m            [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 19 | [39m        )[33m;[39m
 [90m 20 | [39m    }[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)